--- a/modules/interface/CMakeLists.txt
+++ b/modules/interface/CMakeLists.txt
@@ -1,2 +1,2 @@
 aux_source_directory(. dir_interface)
-add_library(interface ${dir_interface} clean_interface.cc clean_interface.h)
+add_library(interface ${dir_interface})
