--- a/modules/model/CMakeLists.txt
+++ b/modules/model/CMakeLists.txt
@@ -1,2 +1,2 @@
 aux_source_directory(. dir_model)
-add_library(model ${dir_model})
+add_library(model ${dir_model} ../systems/administrator/admin_system.cc ../systems/administrator/admin_system.h)
