--- a/modules/model/CMakeLists.txt
+++ b/modules/model/CMakeLists.txt
@@ -1,2 +1,5 @@
 aux_source_directory(. dir_model)
-add_library(model ${dir_model} ../systems/administrator/admin_system.cc ../systems/administrator/admin_system.h)
+add_library(model SHARED ${dir_model})
+
+# 链接动态链接库
+target_link_libraries(model data_struct interface)
