--- a/modules/data_struct/CMakeLists.txt
+++ b/modules/data_struct/CMakeLists.txt
@@ -1,2 +1,4 @@
 aux_source_directory(. dir_data_struct)
-add_library(data_struct ${dir_data_struct} link_list.cc link_list.h)
+add_library(data_struct SHARED ${dir_data_struct})
+# 连上隔壁动态链接库
+target_link_libraries(data_struct interface)
