--- a/build_debug/store_system.cbp
+++ b/build_debug/store_system.cbp
@@ -383,6 +383,9 @@
 		<Unit filename="C:/Users/lilua/Desktop/lessen code/store_system/modules/interface/length_interface.h">
 			<Option target="interface"/>
 		</Unit>
+		<Unit filename="C:/Users/lilua/Desktop/lessen code/store_system/modules/interface/list_interface.h">
+			<Option target="interface"/>
+		</Unit>
 		<Unit filename="C:/Users/lilua/Desktop/lessen code/store_system/modules/interface/modify_interface.h">
 			<Option target="interface"/>
 		</Unit>
