--- a/modules/tools/CMakeLists.txt
+++ b/modules/tools/CMakeLists.txt
@@ -1,2 +1,9 @@
 aux_source_directory(. dir_tools)
-add_library(tools SHARED ${dir_tools})
+add_library(
+        tools SHARED STATIC
+        ${dir_tools}
+        assist.cc
+        file_operations.cc
+        output_template.h
+        output_template.cc
+)
